Remove Thai/Lao Prepend/Extend properties

In UAX#29 revision 19 (reissued for Unicode 6.1.0), Prepend and Extend
GCB properties have been dropped for Thai/Lao. So, drop the hard coding
accordingly.

https://bugzilla.gnome.org/show_bug.cgi?id=576156